apps/drawio/drawio-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drawio
  labels:
    project: DennisCloudOffice
