apps/drawio/drawio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
  labels:
    app: drawio
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: drawio
