apps/drawio/drawio-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drawio-ingressroute
  namespace: drawio
  annotations:
    gethomepage.dev/href: "https://drawio.denniscloud.io"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Create beautiful diagrams
    gethomepage.dev/group: DennisCloud Office
    gethomepage.dev/icon: draw-io.png
    gethomepage.dev/app: drawio
    gethomepage.dev/name: DrawIo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drawio.denniscloud.io`)
      kind: Rule
      services:
        - name: drawio
          port: 80
  tls:
    secretName: drawio-cert-secret
